--- a/index.html
+++ b/index.html
@@ -422,19 +422,21 @@
 
         </section>
 
-        <section class="customer-love">
-            <div class="customer-love-content">
-                <h2>Loved by 2k+ Customers</h2>
-                <br>
-                <p class="join">Explore premium, stylish bags designed for durability, functionality, and eco-conscious
-                    elegance.</p>
-            </div>
-        </section>
+        
 
         <section id="products" class="products">
             <h2>Our Collection</h2>
             <div class="product-grid">
                 <!-- Products will be loaded dynamically -->
+            </div>
+        </section>
+
+        <section class="customer-love">
+            <div class="customer-love-content">
+                <h2>Why choose wavrooza</h2>
+                <br>
+                <p class="join">Explore premium, stylish bags designed for durability, functionality, and eco-conscious
+                    elegance.</p>
             </div>
         </section>
         <!-- Gallery Section -->
