--- a/index.html
+++ b/index.html
@@ -520,14 +520,12 @@
     <!-- The 3 Slides -->
     <div class="slides">
       <div class="slide">
-        <img src="https://via.placeholder.com/900x500/ff7f7f/333333?text=Slide+1" alt="Slide 1">
+        <img src="/images/banner1.webp" alt="Slide 1">
       </div>
       <div class="slide">
-        <img src="https://via.placeholder.com/900x500/7fff7f/333333?text=Slide+2" alt="Slide 2">
+        <img src="/images/banner2.jpeg" alt="Slide 2">
       </div>
-      <div class="slide">
-        <img src="https://via.placeholder.com/900x500/7f7fff/333333?text=Slide+3" alt="Slide 3">
-      </div>
+      
     </div>
 
     <!-- Arrows for Slide #1 (go to #3 prev, go to #2 next) -->
